--- a/.gitignore
+++ b/.gitignore
@@ -104,3 +104,28 @@ venv.bak/
 .mypy_cache/
 
 .vscode/ 
+
+
+#frontend
+
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
