--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,9 @@
     "bootstrap": "^4.6.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.2",
     "react-scripts": "^5.0.1",
+    "react-table": "^7.8.0",
     "reactstrap": "^8.10.1",
     "tailwindcss": "^3.4.10",
     "web-vitals": "^2.1.4"
