--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "dayjs": "^1.11.7",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^3.1.2",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "6.10.0",
